spring mvc  . Interceptor 설정  . performanceCheckInterceptor  . sessionCheckInterceptor  . 국제화  . 중간 프로젝트 spring migration  . hello/hello 기본 스프링 프레임워크 설정  . 사용자 리스트 ajax 처리

--- a/src/main/resources/kr/or/ddit/msg/msg/msg_en.properties
+++ b/src/main/resources/kr/or/ddit/msg/msg/msg_en.properties
@@ -1,2 +1,12 @@
 GREETING=HELLO, {0}!
 LANG=ENGLISH
+
+##\uc0ac\uc6a9\uc790\ub4f1\ub85d
+USERID=USER ID
+USERNM=USER NAME
+ALIAS=NICK NAME
+PASS=PASSWORD
+REG_DT=REGIST DATE
+ADDR1=STREET ADDRESS
+ADDR2=ADDRESS DETAIL
+ZIPCODE=POST CODE
